--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <h3>利用者情報の取得</h3><p>本アプリが利用者の個人情報を取得することはありません。</p>
   <h3>利用者情報の利用</h3><p>本アプリが利用者の個人情報を利用することはありません。</p>
   <h3>利用者情報の第三者提供</h3><p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
-  <h3>お問い合わせ先</h3><p>何か不明な点がございましたらお問い合わせください。
-    e-mail:kanbe5631@gmail.com
+  <h3>お問い合わせ先</h3><p>何か不明な点がございましたらお問い合わせください。<br>
+    e-mail:kanbe5631@gmail.com<br>
     twitter:https://twitter.com/FqYcoZHrsmo87XO
   </p>
 </body>
