--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AirpodsAccelerator</title>
+  <title>AirpodsAccelerationSensor</title>
 </head>
 <body>
-  <h1>AirpodsAccelerator</h1>
+  <h1>AirpodsAccelerationSensor</h1>
   <h2>プライバシーポリシー</h2>
   <h3>利用者情報の取得</h3><p>本アプリが利用者の個人情報を取得することはありません。</p>
   <h3>利用者情報の利用</h3><p>本アプリが利用者の個人情報を利用することはありません。</p>
