--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Yuya Kanbetsuawa built the dokoru app as
+                  Yuya Kanbetsuawa built app as
                   a Free app. This SERVICE is provided by
                   Yuya Kanbetsuawa at no cost and is intended for use as
                   is.
